edit html validation

--- a/public/a.html
+++ b/public/a.html
@@ -20,6 +20,7 @@
                 <label for="distance">Enter Distance (km):</label>
                 <input type="number" id="distance" name="distance" required>
             </div>
+            <div id="validation-message" class="validation-message"></div>
             <div class="vehicle-selection">
                 <h3>Select Vehicle:</h3>
                 <div id="vehicle-options"></div>
