--- a/public/b.html
+++ b/public/b.html
@@ -1,44 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/css/styles1.css">
-    <title>Vehicle Transport Converter</title>
-</head>
-<body>
-    <header>
-        <h1>Time Based</h1>
-    </header>
-    <nav>
-        <a href="/">Home</a>
-        <a href="/a">Distance Based</a>
-    </nav>
-    <main>
-        <div class="container">
-            <h1>Vehicle Transport Converter</h1>
-            <div class="input-section">
-                <label for="hours">Enter Hours:</label>
-                <input type="number" id="hours" name="hours" min="0" required>
-            </div>
-            <div class="input-section">
-                <label for="minutes">Enter Minutes:</label>
-                <input type="number" id="minutes" name="minutes" min="0" max="59" required>
-            </div>
-            <div class="vehicle-selection">
-                <h3>Select Vehicle:</h3>
-                <div id="vehicle-options">
-                </div>
-            </div>
-            <button id="calculate-distance">Calculate Distance Traveled</button>
-            <button id="compare-vehicles">Compare All Options</button>
-            <div id="result"></div>
-            <div id="comparison-result"></div>
-        </div>
-    </main>
-    <script src="script1.js"></script>
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -65,6 +24,7 @@
                 <label for="minutes">Enter Minutes:</label>
                 <input type="number" id="minutes" name="minutes" min="0" max="59" required>
             </div>
+            <div id="validation-message" class="validation-message"></div>
             <div class="vehicle-selection">
                 <h3>Select Vehicle 1:</h3>
                 <div id="vehicle-options1"></div>
